WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178444
REGRESSION(
r217771
): nullTerminatedWCharToString loses last character of input string
https://bugs.webkit.org/show_bug.cgi?id=178444
Summary
REGRESSION(r217771): nullTerminatedWCharToString loses last character of inpu...
Konstantin Tokarev
Reported
2017-10-18 05:41:22 PDT
wcslen() returns length without terminating null character. I've put "- 1" there because originally that function was meant to be templated and operate on wchar[] literals.
Attachments
Patch
(1.29 KB, patch)
2017-10-18 05:42 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2017-10-18 05:42:30 PDT
Created
attachment 324111
[details]
Patch
Per Arne Vollan
Comment 2
2017-10-18 07:45:12 PDT
Comment on
attachment 324111
[details]
Patch R=me.
Konstantin Tokarev
Comment 3
2017-10-18 07:57:15 PDT
Comment on
attachment 324111
[details]
Patch Clearing flags on attachment: 324111 Committed
r223606
: <
https://trac.webkit.org/changeset/223606
>
Konstantin Tokarev
Comment 4
2017-10-18 07:57:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-10-18 07:58:04 PDT
<
rdar://problem/35051595
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug