REGRESSION(r217771): nullTerminatedWCharToString loses last character of input string https://bugs.webkit.org/show_bug.cgi?id=178444

Reviewed by Per Arne Vollan.

* wtf/text/win/WCharStringExtras.h:
(WTF::nullTerminatedWCharToString):


Canonical link: https://commits.webkit.org/194660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223606 268f45cc-cd09-0410-ab3c-d52691b4dbfc